--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           {% if name %}
             <a class="btn btn-primary float-end mt-3 ms-3" href="/logout">Sign Out</a>
           {% else %}
-            <a class="btn btn-primary float-end mt-3 ms-3" href="/signin">Sign In</a>
+            <a class="btn btn-primary float-end mt-3 ms-3" href="/login">Sign In</a>
           {% endif %}
         </div>
       </div>
