Add HTMX script

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,9 +34,13 @@
         {% endblock %}
     </div>
     <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%2Fbootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%252Fhtmx.min.js" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
   </body>
-  <footer>
-    {% block footer %}
-    {% endblock %}
+  <footer class="footer">
+    <div class="container fixed-bottom">
+      {% block footer %}
+      {% endblock %}
+      <p class="text-center text-muted">Created by KC Flynn</p>
+    </div>
   </footer>
 </html>
