--- a/templates/snippet-card.html
+++ b/templates/snippet-card.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-1">
                 <button type="button" class="btn btn-danger float-end m-1">Delete</button>
-                <button type="button" class="btn btn-primary float-end m-1">Change Tag</button>
+                {# <button type="button" class="btn btn-primary float-end m-1">Change Tag</button> #}
             </div> 
         </div>
     </div>
