Deleter + minor fixes

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%2Fhtmx.min.js" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
   </body>
   <footer class="footer">
-    <div class="container fixed-bottom">
+    <div class="container sticky-bottom">
       {% block footer %}
       {% endblock %}
       <p class="text-center text-muted">Created by KC Flynn</p>
