--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,8 @@
         </div>
       </div>
         {% block body %}
-        <p>Block body</p>
+        <!-- For Debugging -->
+        <p style="border: 1px solid red;">Block body</p>
         {% endblock %}
     </div>
     <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%2Fbootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
