Pull search resource types from REST API

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
               hx-swap="innerHTML">
               <option selected value="all">All</option>
               {% for option in selection %}
-              <option value="{{ option }}">{{ option.title() }}</option>
+              <option value="{{ option }}">{{ option }}</option>
               {% endfor %}
             </select>
           </div>
