--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,7 +4,7 @@
         <div class="row sticky-top m-2">
           <div class="col"></div>
           <div class="col-8 dropdown">
-            <select name="resource_type" class="form-select form-select-lg m-2"
+            <select id="filter" name="resource_type" class="form-select form-select-lg m-2"
               hx-get="/p"
               hx-target="#inventory"
               hx-swap="innerHTML">
