--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -4,15 +4,24 @@
         <div class="row sticky-top m-2">
           <div class="col"></div>
           <div class="col-8 dropdown">
-            <select id="filter" name="resource_type" class="form-select form-select-lg m-2"
+            <select id="filter" name="resource_type" class="form-select form-select-lg m-2 col-sm-6"
               hx-get="/p"
               hx-target="#inventory"
               hx-swap="innerHTML">
               <option selected value="all">All</option>
-              {% for option in selection %}
+              {% for option in selections %}
               <option value="{{ option }}">{{ option }}</option>
               {% endfor %}
             </select>
+            <select id="region_filter" name="region" class="form-select form-select-lg m-2 col-sm-2"
+            hx-get="/p"
+            hx-target="#inventory"
+            hx-swap="innerHTML">
+            <option selected value="all">{{ home }}</option>
+            {% for region in regions %}
+            <option value="{{ region }}">{{ region }}</option>
+            {% endfor %}
+          </select>
           </div>
           <div class="col"></div>
         </div>
