--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -37,11 +37,10 @@
     <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%2Fbootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ociateam.objectstorage.us-ashburn-1.oci.customer-oci.com/n/ociateam/b/kc-public-files/o/js%2Fhtmx.min.js" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
   </body>
-  <footer class="footer">
-    <div class="container sticky-bottom">
+  <footer class="fixed-bottom">
       {% block footer %}
       {% endblock %}
-      <p class="text-center text-muted">Created by KC Flynn</p>
-    </div>
+      <p class="text-center text-muted m-0">Created by KC Flynn</p>
+      <p class="text-center text-muted m-0">&copy; Oracle Corporation 2024</p>
   </footer>
 </html>
